start adding cocoa lumberjack formatter

--- a/PositionIn.xcodeproj/xcshareddata/xcschemes/Messaging.xcscheme
+++ b/PositionIn.xcodeproj/xcshareddata/xcschemes/Messaging.xcscheme
@@ -48,6 +48,13 @@
             ReferencedContainer = "container:PositionIn.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "XcodeColors"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
