--- a/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
+++ b/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
@@ -130,6 +130,13 @@
             ReferencedContainer = "container:PositionIn.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "XcodeColors"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
