--- a/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
+++ b/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
@@ -100,6 +100,16 @@
                ReferencedContainer = "container:PositionIn.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E62C35FF1BF4DF9200003A31"
+               BuildableName = "PositionInUITests.xctest"
+               BlueprintName = "PositionInUITests"
+               ReferencedContainer = "container:PositionIn.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
