--- a/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
+++ b/PositionIn.xcodeproj/xcshareddata/xcschemes/PositionIn.xcscheme
@@ -114,7 +114,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "DevRelease"
+      buildConfiguration = "DevDebug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
