--- a/PositionIn/Supporting Files/Info.plist
+++ b/PositionIn/Supporting Files/Info.plist
@@ -30,6 +30,16 @@
 				<string>fb1620572758230874</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.positionin.dev01</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.positionin.dev01.payments</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>PIN_MINOR_VERSION</string>
@@ -54,6 +64,12 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbauth2</string>
+		<string>com.paypal.ppclient.touch.v1
+</string>
+		<string>com.paypal.ppclient.touch.v2
+</string>
+		<string>org-appextension-feature-password-management
+</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
