--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "XMPPFramework"]
-	path = XMPPFramework
+[submodule "Messaging/XMPPFramework"]
+	path = Messaging/XMPPFramework
 	url = https://github.com/robbiehanson/XMPPFramework.git
