--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Messaging/XMPPFramework"]
-	path = Messaging/XMPPFramework
+	path = XMPPFramework
 	url = https://github.com/robbiehanson/XMPPFramework.git
