--- a/Applications/RCKenya/Supporting Files/Info.plist
+++ b/Applications/RCKenya/Supporting Files/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Red Cross Dev</string>
+	<string>RC Dev KE</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
