fixed gitHub redirect_uri error

--- a/GitHubRESTAPITestProject/Info.plist
+++ b/GitHubRESTAPITestProject/Info.plist
@@ -7,7 +7,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>vkGitHub</string>
+				<string>vkgithub</string>
 			</array>
 			<key>CFBundleURLName</key>
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
